--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "melissa-goodway-portfolio",
   "private": true,
   "dependencies": {
+    "@hotwired/stimulus": "^3.1.0",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@hotwired/turbo-rails": "^7.2.0",
+    "@lottiefiles/lottie-player": "^1.5.7",
     "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.2.1",
+    "cloudinary-video-player": "^1.9.3",
+    "scroll": "^3.0.1",
     "stimulus": "^3.1.0",
+    "stimulus-scroll-to": "^4.0.0",
+    "to": "^0.2.9",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
